avoid multiple @test comments in a single source file - CODETOOLS-7901914